packages/next-swc/crates/core/tests/errors/next-font-downloaders/not-named-import/input.js
import * as googleFonts from '@next/google-fonts'
import coolFonts, { inter } from 'cool-fonts'
